[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://scripts/menu.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 510.842, 299.926 )
scale = Vector2( 0.532373, 0.559248 )
texture = ExtResource( 1 )

[node name="tirrek" type="Button" parent="Sprite"]
anchor_left = 0.08
anchor_top = 0.405
anchor_right = 0.238
anchor_bottom = 0.57
margin_left = -975.6
margin_top = -540.928
margin_right = -949.96
margin_bottom = -523.128
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tirrek2" type="Button" parent="Sprite"]
anchor_left = 0.413
anchor_top = 0.402
anchor_right = 0.597
anchor_bottom = 0.57
margin_left = -959.624
margin_top = -540.16
margin_right = -960.904
margin_bottom = -525.6
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tirrek3" type="Button" parent="Sprite"]
anchor_left = 0.765
anchor_top = 0.404
anchor_right = 0.949
anchor_bottom = 0.586
margin_left = -959.672
margin_top = -539.571
margin_right = -960.952
margin_bottom = -540.131
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Sprite/tirrek" to="." method="_on_tirrek_pressed"]
[connection signal="pressed" from="Sprite/tirrek2" to="." method="_on_tirrek2_pressed"]
[connection signal="pressed" from="Sprite/tirrek3" to="." method="_on_tirrek3_pressed"]
